--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="col-md-6">
         <div class="pin-generator half-width">
           <input class="form-control" type="text">
-          <button class="generate-btn">Generate Pin</button>
+          <button onclick="generatePin()" class="generate-btn">Generate Pin</button>
         </div>
       </div>
       <div class="col-md-6">
@@ -57,6 +57,8 @@
         <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
       </div>
     </div>
+  </div>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
